[package]
name = "audio-filters"
version = "0.1.0"
authors = ["DGriffin91 <github@dgdigital.net>"]
edition = "2018"
description = "Filters for real-time audio"
repository = "https://github.com/RustyDAW/audio-filters"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
libm = "0.2.1"
num-complex = {version = "0.4", feature = "libm"}
num-traits = {version = "0.2.14", feature = "libm"}
